crates/args/tests/ui/fail/mapped_format_expression.rs
fn main() {
    // unused named variable 'y'
    redefmt_args::mapped_format_expression!("{}", 1, y = true);
}
